# generate_random_user

./: .flake8  main.py  pyproject.toml
src/: generate.py
test/: test_generate.py  test_main.py
