[project]
name = "generate-random-user"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Znamenskiy",email = "aznamenskiy92@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
